<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="226dp"
            android:layout_height="52dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="@font/blackout_1"
            android:foregroundTint="@color/colorPrimary"
            android:text="@string/manage_event"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="400dp"
            android:layout_height="119dp"
            android:layout_gravity="center"
            android:padding="20dp"
            app:srcCompat="@drawable/unisportslogo" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="489dp"
        android:layout_gravity="center"
        android:background="@drawable/round_border_text"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/event_name"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/event_name"
                    android:text="" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/event_spaces"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/spaces"
                    android:text="" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="5dp"
                app:helperText="@string/venues">

                <Spinner
                    android:id="@+id/event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/event_date"
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="00dp"
                    android:layout_marginTop="150dp"
                    android:ems="10"
                    android:hint="@string/enter_date"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
                />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/x"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/event_start"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:hint="Start Time" />

            <EditText
                android:id="@+id/event_end"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:hint="End Time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/event_description"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:hint="@string/description" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/button_change"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:text="@string/update_event"
                android:textColor="#FFFFFF" />
            <Button
                android:id="@+id/button_delete"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button"
                android:text="@string/delete_event"
                android:textColor="#FFFFFF" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>